@@ -1,3 +1,7 @@
+Wed Jul  2 22:32:49 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/sql2tds.c src/odbc/unittests/funccall.c:
+	- fix some issues with RPC (not finished)
+
 Tue Jul  1 22:22:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/native.c src/odbc/odbc.c:
 	- applied Peter Daecon patch
